--- a/蓝铅笔/pages/touch/touch.wxml
+++ b/蓝铅笔/pages/touch/touch.wxml
@@ -1,8 +1,62 @@
 <view>
-  <!-- 头部 -->
-  <header></header>
-  <!-- 头部下面专业课 -->
-  <banner></banner>
-  <!-- 学画画 正当时 -->
-  <dkQnPV></dkQnPV>
+	<!-- 头部 -->
+	<header></header>
+	<!-- 头部下面专业课 -->
+	<banner></banner>
+	<!-- 学画画 正当时 -->
+	<!-- <dkQnPV></dkQnPV> -->
+	<!-- 正片开始 -->
+	<view class="main-layout">
+		<view class="layout">
+			<view class="mainBody">
+				<!-- 大触直播  大触专访 大触周边 -->
+				<view class="daniu-nav">
+					<view class="{{blue === 0 ? 'active' : ''}}" data-index="{{0}}" bindtap="blue">
+						大触直播
+						<text class="{{blue === 0 ? 'one' : ''}}"></text>
+					</view>
+					<view class="{{blue === 1 ? 'active' : ''}}" data-index="{{1}}" bindtap="blue">
+						大触专访
+						<text class="{{blue === 1 ? 'one' : ''}}"></text>
+					</view>
+					<view class="{{blue === 2 ? 'active' : ''}}" data-index="{{2}}" bindtap="blue">
+						大触周边
+						<text class="{{blue === 2 ? 'one' : ''}}"></text>
+					</view>
+				</view>
+				<!-- 往期直播 -->
+				<view class="dn-home-con">
+					<!-- 往期直播 -->
+					<view class="dn-titles">
+						<text class="before"></text>
+						往期直播
+						<text class="after"></text>
+					</view>
+					<!-- 直播区 -->
+					<view class="boxss">
+						<!-- 循环 -->
+						<view class="dn-course" wx:for="{{zb}}" wx:key="index">
+							<!-- 图 -->
+							<view class="covers">
+								<image class="img" src="https://ss.lanqb.com/{{item.posters.mobile}}?imageView2/1/w/280/h/210" mode="" />
+								<view class="em">第{{item.periods}}期</view>
+							</view>
+							<!-- 字 -->
+							<view class="des">
+								<view class="h4">
+									{{item.title}}
+								</view>
+								<view class="auther">
+									<image class="img" src="https://ss.lanqb.com/{{item.user_profile.avatar}}?imageView2/1/w/60/h/60" mode="" />
+									<text class="spans">{{item.user_profile.nickname}}</text>
+								</view>
+								<view class="p">时间：{{item.begin_at}}</view>
+								<view class="p">{{item.statistic.purchases}}人感兴趣</view>
+							</view>
+						</view>
+					</view>
+				</view>
+			</view>
+		</view>
+	</view>
 </view>
